# Mathscript

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .oryxignore  .replit  =2.31.0  AGENTS.md  Azure_api.py  DEPLOY_MARKER.txt  Dockerfile  README.md  app.py  build.sh  deploy.sh  fetch_all_changes.js  fetch_changes.js  find_api_keys.py  latest_quest_log.txt  load_keys.py  main.py  mathscript.service  nginx-mathscript.conf  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.md  requirements-test.txt  requirements.txt  setup.sh  start_all.sh  startup.sh  startup.txt  themathscript_v2_backup.dump  themathscript_v2_backup.dump~  upload_log.js  your_file.py
.cursor/rules/: backend-python.mdc  frontend-react.mdc  oracle-deploy.mdc  spring-java-migration.mdc
.devcontainer/: devcontainer.json
.github/workflows/: azure-deploy.yml  deploy-hf-space.yml  deploy.yml  frontend-quality.yml  main_mathscript-1774562284.yml  main_mathscript.yml  replit_mathscript-1774562284.yml  (+1 more)
alembic/: env.py
attached_assets/: Pasted-import-streamlit-as-st-from-google-import-genai-import-_1770845326218.txt
backend/: admin.html  check_subscribers.py  config.py  cosmos_service.py  database.py  db_edu.py  healthcheck.py  main.py  models.py  resend_client.py  seed_edu.py  seed_products.py  stripe_client.py
deploy/: README.md
docs/: SECURITY_HARDENING_RUNBOOK.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  play.html  vite.config.js  vitest.config.js
scripts/: bug_check.sh
spring-backend/: pom.xml
(+80 files in other folders)
