[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "fpdf2>=2.7.0",
    "google-genai>=1.62.0",
    "httpx>=0.28.0",
    "openai>=2.20.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "requests>=2.32.0",
    "resend>=2.23.0",
    "stripe>=12.0.0",
    "uvicorn>=0.40.0",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
]
